--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <!-- My Works -->
 <div class = "row">
   <div class = "col-sm-4 mb-3 mb-sm-0">
-    <div class="card"  style = "height: 425px;">
+    <div class="card";>
       <img src="./kpi.JPG" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">KPI Dashboard </h5>
@@ -70,7 +70,7 @@
   </div>
 
   <div class = "col-sm-4 mb-3 mb-sm-0">
-    <div class="card" style = "height: 425px;">
+    <div class="card";>
       <img src="./MEL dashboard.JPG" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">MEL Rank Dashboard </h5>
@@ -82,7 +82,7 @@
 
   <div class = "col-sm-4 mb-3 mb-sm-0">
     <div class="card" style = "height: 425px;">
-      <img src="./mapTab.png" class="card-img-top" style = "height: 100px";>
+      <img src="./mapTab.png" class="card-img-top";>
       <div class="card-body">
         <h5 class="card-title">Animated Flight Schedule </h5>
         <p class="card-text">Tool created to show an animated, visual represention of flights in and out of stations</p>
